fixed alignment for current flow, added complete check in explained, reworded explainations

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
    font-family: Helvetica, Arial, sans-serif;
 }
 h1 {
-	font-size: 48px;
+	font-size: 40px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 700;
@@ -27,6 +27,9 @@ p {
 }
 .fa {
 	color: #333;
+}
+.center {
+	margin: 0 auto;
 }
 
 #footer {
